--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -60,6 +60,6 @@ table th:nth-child(6) {
 }
 .btn1{
    background-color: #C71B2A;
-   width: 30%;
+   width:150px;
   border: 5px solid transparent;
 }
